--- a/src/Components/Container.css
+++ b/src/Components/Container.css
@@ -3,4 +3,8 @@
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
 }
+
+.media {
+  margin-bottom: 40px;
+}
 /*# sourceMappingURL=Container.css.map */
