add button and one more table

--- a/src/Components/Container.scss
+++ b/src/Components/Container.scss
@@ -7,3 +7,13 @@
 .media {
     margin-bottom: 40px;
 }
+
+.warning {
+    background-color: #FFC107;
+    color: white;
+    font-size: 22px;
+}
+
+.margin {
+    margin: 40px 0px;
+}
