--- a/src/Components/Container.css
+++ b/src/Components/Container.css
@@ -7,4 +7,14 @@
 .media {
   margin-bottom: 40px;
 }
+
+.warning {
+  background-color: #FFC107;
+  color: white;
+  font-size: 22px;
+}
+
+.margin {
+  margin: 40px 0px;
+}
 /*# sourceMappingURL=Container.css.map */
