add a modal for Reserve a table

--- a/src/Components/Menu.scss
+++ b/src/Components/Menu.scss
@@ -2,7 +2,11 @@
     background-color: #512DA8;
 }
 
-.btn-primary {
-    background-color: #512DA8;
-    border-color: #512DA8;
+
+.navbar-nav {
+    
+    .btn-primary {
+        background-color: #512DA8;
+        border-color: #512DA8;
+    }
 }
