--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,11 +1,40 @@
-.jumbotron {
-    padding: 70px 30px 70px 30px;
-    margin: 0px auto;
-    background: #9575CD;
-    color: floralwhite;
+$background-light: #9575CD;
+$background-dark: #512DA8;
+$background-littlelight:#D1C4E9;
+$lt-gray: #ddd;
+$font-size: 22px;
 
-    .row-header {
-        margin: 0px auto;
-        padding: 0px;
+@mixin zero-margin($pad-up-dn, $pad-left-right) {
+	margin:0px auto;
+	padding: $pad-up-dn $pad-left-right;
+}
+
+.jumbotron {
+    @include zero-margin(70px,30px);
+    background: $background-light ;
+    color:$lt-gray;
+
+    .row-header{
+        @include zero-margin(0px,0px);
     }
+    
+}
+
+.close {
+    color: $background-littlelight;
+}
+
+.reserveatble {
+    background-color: $background-dark;
+    font-size: $font-size;
+    color: $lt-gray;
+    border-bottom: 1px solid $background-dark;
+}
+
+.modalbody {
+    background-color: $background-littlelight;
+}
+
+.modal-content {
+    width: 120%;
 }
